index.css
* {
    box-sizing: border-box;
}


@font-face {
    font-family: chyron;
    src: url('./Assets/dots.otf');
}

html,
body {
    overflow: hidden;
}

@keyframes fade-in {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

body {
    font-family: sans-serif;
    /* text-align: center; */
    /* background: rgb(13, 19, 22); */
    background: black;
    filter: url("#displacement-filter");
    animation: fade-in .1s forwards linear;
}

.scene {
    margin: 40px 0;
    position: relative;
    width: 75%;
    height: 75vh;
    margin: 80px auto;
    perspective: 1000px;
    /* overflow-y: hidden; */
}

.carousel {
    width: 100%;
    height: 100%;
    position: absolute;
    transform: translateZ(-288px);
    transform-style: preserve-3d;
    transition: transform 1s;
}

.carousel__cell {
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    position: absolute;
    width: 90%;
    height: 90%;
    top: 10px;
    color: white;
    transition: transform 1s, opacity 1s;
    border-radius: 2px;
}



.home {
    background: none;
    text-align: left;
    position: relative;
    overflow: hidden;
}

.home-background {
    width: 100%;
    height: 100%;
    background-image: url("./Assets//Photos\ of\ Mimi\ and\ Cole/4.png");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 60%;
    position: absolute;
    z-index: -1;
}

.works__background {
    width: 100%;
    height: 100%;
    z-index: -2;
    position: absolute;
    filter: brightness(50%);
    opacity: 50%;
}

.works__link,
.works__link:visited {
    color: white;
    margin: 10%;
    line-height: 100px;
    font-size: 2rem;
}

.works__link:hover {
    color: rgb(170, 170, 170);
}

h2 {
    font-size: 2.2rem;
    margin: 20px;
    text-align: center;
}

.shows {
    background-color: rgba(0, 0, 0, 0.9);
}

.shows h2,
h3,
h4,
h5 {
    margin: 0;
}

.shows-container {
    display: flex;
    padding: 10%;
    justify-content: center;
    gap: 10px;
    flex-direction: column;
    overflow: scroll;
    max-height: 90%;
    margin-top: 10px;
    width: 100%;
}

.show-info {
    border-bottom: 1px solid white;
    padding: 10px 20px;
    text-align: left;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    align-items: center;
    white-space: nowrap;
}

.show-info__date {
    margin-top: 5px;
}

.show-info__location {
    justify-self: center;
}

.show-info__link {
    color: black;
    text-decoration: none;
    background-color: wheat;
    padding: 5px 10px;
    border: none;
    transition: all .1s ease-in;
    width: fit-content;
    justify-self: right;
    order: 3;
}

.show-info__link:hover {
    outline: 1px solid white;
    background-color: rgba(245, 222, 179, 0);
    color: white;
    transition: all .1s ease-out;
}

.about {
    background-color: rgba(0, 0, 0, 0.9);
    overflow-y: scroll;
}

.about h3 {
    font-size: 1.75rem;
    text-align: center;
}

.bio {
    max-width: 600px;
    text-align: justify;
    margin: 0 auto;
    font-weight: bold;
}

.works {
    background-color: rgba(17, 16, 16, 0.911);
    font-weight: bold;
}

.works__video {
    /* opacity: 0%; */
    transition: opacity .25s ease-in;
}

.works_video.visible {
    opacity: 100%;
    transition: opacity .25s ease-in;
}

.photos {
    background-color: rgba(0, 0, 0, 0.493);
}

.carousel-options {
    text-align: center;
    position: absolute;
    bottom: 0px;
    width: 95%;
    height: fit-content;
    display: flex;
    justify-content: center;
    gap: 10ch;
    z-index: 2;
}

.home button {
    font-size: 1.5rem;
    background: none;
    letter-spacing: 2px;
    text-decoration: underline;
    color: white;
    border: none;
    cursor: pointer;
    width: fit-content;
    text-underline-offset: 5px;
    transition: letter-spacing .2s ease;
}

.home button:hover {
    text-decoration-color: rgb(97, 98, 0);
    letter-spacing: 5px;
    transition: letter-spacing .2s ease-out;
}

.home h2 {
    text-align: left;
}

.buttons-container {
    display: flex;
    flex-direction: column;
    margin-left: 20px;
    gap: 10px;
}

.next-button,
.previous-button {
    background: none;
    border: none;
    color: white;
    font-size: 2rem;
    font-weight: bold;

    cursor: pointer;
    -webkit-touch-callout: none;
    /* iOS Safari */
    -webkit-user-select: none;
    /* Safari */
    -khtml-user-select: none;
    /* Konqueror HTML */
    -moz-user-select: none;
    /* Old versions of Firefox */
    -ms-user-select: none;
    /* Internet Explorer/Edge */
    user-select: none;
}

.photos {
    overflow: scroll;
}

.photos__gallery-wrapper {
    display: flex;
    justify-content: center;
    width: 100%;
}

.photos__gallery {
    width: 90%;
    display: grid;
    justify-items: center;
    gap: 1rem;
    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
    margin: 20px;
}

.photos__gallery img:hover {
    filter: sepia(50%);
}

.photos__gallery img {
    width: 100%;
    cursor: pointer;
}

.credits {
    width: fit-content;
    margin: 0 auto;
}

.credits h3 {
    padding: 20px;
}

.credits__performance {
    padding-bottom: 10px;
    margin: 0;
}

.credits__show-name {
    font-size: .9rem;
    font-style: italic;
}

.image-modal {
    position: absolute;
    width: 100vw;
    height: 100vh;
    background: rgba(0, 0, 0, 0.856);
    display: none;
    top: 0;
    left: 0;
    z-index: 9999;
}

.image-modal.show {
    display: block;
}

.image-modal img {
    width: 50%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.modal__close-button {
    position: absolute;
    top: 1ch;
    right: 2ch;
    background: none;
    border: none;
    font-size: 2rem;
    cursor: pointer;
    color: white;
}


@media only screen and (max-width: 1000px) {
    .carousel__cell {
        width: 100%;
        height: 80%;
        top: 0px;
    }

    .scene {
        width: 100%;
    }

    .show-info {
        grid-template-columns: 1fr 1fr;
    }

    .show-info__location {
        display: none;
    }

    .bio {
        padding: 0 10px;
        font-weight: bold;
    }

    .works__link {
        font-size: 1.3rem;
        line-height: 5ch;
    }

    img {
        pointer-events: none;
    }
}

